<resources>
    <string name="app_name">online shopping </string>

    <!--    Gender types    -->
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!--    Search types    -->
    <string-array name="search_array">
        <item>Search by Text</item>
        <item>Search by Voice</item>
        <item>Search by Barcode</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CVV">cvv</string>
    <string name="Number">Number</string>
    <string name="ExpireDate">experydate</string>
    <string name="Card_Number">cardnumber</string>
    <string name="month">month</string>
    <string name="ExpireDateYear">year\n</string>

</resources>